site/resources/styles/checker.css
/* ... */
.dropdown > .dropdown-content > .dropdown-hider {
	display: none;
}

.dropdown > input[name="collapse"]:checked ~ .dropdown-content > .dropdown-hider {
	display: contents;
}

/* Special dropdowns */
.rightbox .dropdown-display-controls,
.sidenav-hamburger .dropdown-sidenav-hamburger {
	margin: 0.5rem;
}

.dropdown-display-controls .dropdown-content,
.dropdown-sidenav-hamburger > .dropdown-content {
	overflow: hidden;

	height: 0;
	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);

	border-top: none;
	border-right: none;
	border-bottom: none;
	border-left: none;

	padding-right: 0;
	padding-bottom: 0;
	padding-left: 0;
	padding-top: 0;

	margin-bottom: 0;
}

.dropdown-display-controls > input[name="collapse"]:checked ~ .dropdown-content,
.dropdown-sidenav-hamburger > input[name="collapse"]:checked ~ .dropdown-content {
	height: auto;
	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);
	padding: 0.75rem;
	border-top: 1px solid var(--tone-colour,#FFFFFF);
	border-right: 1px dashed var(--tone-colour,#FFFFFF);
	border-bottom: 1px dashed var(--tone-colour,#FFFFFF);
	border-left: 1px dashed var(--tone-colour,#FFFFFF);
}

.dropdown-display-controls .dropdown-content {
	max-height: 50vh;
	overflow: scroll;
}

.dropdown-display-controls input[type="checkbox"]:not(#display-bg-checker) ~ label.dropdown-label::before {
	content: "Show display controls"
}

.dropdown-display-controls input[type="checkbox"]:not(#display-bg-checker):checked ~ label.dropdown-label::before {
	content: "Hide display controls"
}

.dropdown-display-controls input[type="checkbox"]:not(#display-bg-checker) {
	appearance: none;
}

.sidenav-hamburger {
	z-index: 1;
	background-color: var(--sidebar-colour,#1C0023);
	position: fixed;
	top: 0;
	width: 100%;
	display: none;
}

.sidenav-hamburger .dropdown-sidenav-hamburger  input[type="checkbox"]:not(#display-bg-checker):checked ~ .dropdown-content {
	height: 50vh;
	max-height: 50vh;
}

@media screen and (max-width: 840px) {
	.sidenav-hamburger {
		display: block;
	}
	.dropdown-display-controls > input[name="collapse"]:checked ~ .dropdown-content,
	.dropdown-sidenav-hamburger > input[name="collapse"]:checked ~ .dropdown-content {
		padding: 0.5rem;
	}
	.rightbox .dropdown-display-controls,
	.sidenav-hamburger .dropdown-sidenav-hamburger {
		margin: 0.25rem;
	}
	.dropdown-display-controls .dropdown-content {
		max-height: 30vh;
	}
}

.dropdown-sidenav-hamburger > input[type="checkbox"]:not(#display-bg-checker) ~ label.dropdown-label::before {
	content: "Show navigation"
}

.dropdown-sidenav-hamburger > input[type="checkbox"]:not(#display-bg-checker):checked ~ label.dropdown-label::before {
	content: "Hide navigation"
}

.dropdown-display-controls > .dropdown-content > .dropdown-hider,
.dropdown-sidenav-hamburger > .dropdown-content > .dropdown-hider {
	display: none;
}

.dropdown-display-controls > input[name="collapse"]:checked ~ .dropdown-content > .dropdown-hider,
.dropdown-sidenav-hamburger > input[name="collapse"]:checked ~ .dropdown-content > .dropdown-hider {
	display: contents;
}

/* Input */
button,
input[type="number"] {
	font-family: var(--main-font,atkinson-hyperlegible, sans-serif);
	font-size: 1.2rem;
	text-align: left;
	border: 1px solid var(--a-colour,#FF9EBC);
	color: var(--a-colour,#FF9EBC);
	text-decoration: none;
	background-color: transparent;
	line-height: 1.5;
}

button:hover {
	border: 1px solid var(--a-hover-colour,#FBD1FF);
	color: var(--a-hover-colour,#FBD1FF);
	text-decoration: underline dotted var(--a-hover-colour,#FBD1FF);
}

button:active {
	border: 1px solid var(--a-active-colour,#FFFFFF);
	color: var(--a-active-colour,#FFFFFF);
	text-decoration: underline dotted var(--a-hover-colour,#FBD1FF);
}

.rightbox button {
	font-size: 1rem;
}

.rightbox input[type="number"] {
	width: 4rem;
	font-size: 1rem;
}

input[type="radio"] {
	appearance: none;
	border-radius: 50%;
	width: 16px;
	height: 16px;
	border: 2px solid var(--a-colour,#FF9EBC);
	transition: 0.2s all linear;
	margin-right: 5px;
	position: relative;
	top: 4px;
}

input[type="radio"]:hover {
	border: 3px solid var(--a-hover-colour,#FBD1FF);
}

input[type="radio"]:active {
	border: 7px solid var(--a-active-colour,#FFFFFF);
}

input[type="radio"]:checked {
	border: 6px solid var(--a-colour,#FF9EBC);
}

/* Scrollbar */
* {
	scrollbar-color: var(--hr-colour,var(--text-colour,#FF417D)) transparent;
}

*::-webkit-scrollbar-track {
	background: transparent;
}

*::-webkit-scrollbar-thumb {
	background-color: var(--hr-colour,var(--text-colour,#FF417D));
}

/* bruh */
body {
	margin: 0;
	border: none;
	padding: 0;
	width: 100vw;
	overflow-x: hidden;
}

/* --- Sidenav Styling --- */
.sidenav {
	outline: none;
	border-style: none;
	background-image: none;
	height: 100%;
	width: 13.75vw;
	min-width: 8.75rem;
	padding: 0.75rem;
	position: fixed;
	z-index: 1;
	top: 0;
	left: 0;
	background-color: var(--sidebar-colour,#1C0023);
	font-size: 1rem;
	overflow: auto;
}

.rightbox {
	outline: none;
	border-style: none;
	background-image: none;
	width: 13.75vw;
	min-width: 8.75rem;
	position: fixed;
	vertical-align: bottom;
	z-index: 2;
	bottom: 0;
	right: 0;
	background-color: var(--rightbox-colour,#1c002380);
	font-size: 1rem;
}

#section-dropdown-sidebar a::before {
	content: "";
	opacity: 0.7;
}

#section-dropdown-sidebar a::after {
	content: "";
	opacity: 0.7;
}

/* Separate main content from sidebar */
.content {
	margin: 0 auto;
	padding: 0;
	width: 60vw;
	max-width: var(--main-content-width,80ch);
}

@media screen and (max-width: 840px) {
	.content {
		width: 90vw;
	}
	.sidenav {
		display: none;
	}
	.rightbox {
		outline: none;
		border-style: none;
		background-image: none;
		min-width: none;
		width: 100%;
		left: 0;
		right: auto;
		background-color: var(--sidebar-colour,#1C0023);
		font-size: 1rem;
	}
}

